# leadflow-bot

./: .env.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2f554113a75f_add_service_to_leads.py  3d5291081f91_fix_user_id_type.py  c28ec1e31709_create_leads_table.py
bot/: config.py
bot/database/: db_helper.py  enums.py  models.py  schemas.py
bot/filters/: admin.py
bot/handlers/: __init__.py  admin.py  common.py  form.py  start.py
bot/integrations/: google_sheets.py
bot/keyboards/: admin_kb.py  form_kb.py  menu.py
bot/services/: google_sheets_service.py  lead_service.py  notify_service.py  webhook_service.py
bot/states/: lead_form.py
bot/utils/: logger.py  validators.py
